--- a/server_files/index.html
+++ b/server_files/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>New Document</title>
 </head>
-<body style="background-color:#33475b">
+<body style="background-color:#e76ac2">
 	Hello , this is the body
 </body>
 </html>
