--- a/server_files/upload.html
+++ b/server_files/upload.html
@@ -5,7 +5,7 @@
   <title>upload</title>
 </head>
 <body>
-  <form action="/cgi-bin/upload.py" method="post" enctype="multipart/form-data">
+  <form action="/execute/upload.py" method="post" enctype="multipart/form-data">
   <p><input type="file" name="file1">
   <p><button type="submit">Submit</button>
 </form>
